--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@
   --dark-grayish-blue: hsl(228, 12%, 48%);
   --white: hsl(0, 0%, 100%);
   --cream: hsl(30, 38%, 92%);
-  --button-cart-hover: hsl(158, 36%, 29%);
+  --button-cart-hover-color: hsl(158, 36%, 27%);
   --card-max-width: 480px;
 }
 
@@ -29,7 +29,7 @@ body {
   display: flex;
 }
 
-.flexbox-centralize {
+.flex-centralize {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -38,7 +38,7 @@ body {
 
 .product-card {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   border-radius: 12px;
   background: var(--white);
   overflow: hidden;
@@ -46,17 +46,22 @@ body {
   box-shadow: 0px 5px 80px #aaa;
 }
 
+.product-img {
+  max-width: 100%;
+}
+
 .product-body {
   flex-direction: column;
   justify-content: space-between;
-  gap: .85rem;
   padding: 6%;
+  gap: 1rem;
 }
 
 .product-description {
   flex-direction: column;
   justify-content: space-between;
-  row-gap: .85rem;
+  flex-grow: 1;
+  gap: 1rem;
 }
 
 .product-title, .currenty-price {
@@ -101,13 +106,12 @@ body {
   cursor: pointer;
   column-gap: 10px;
   padding: 4% 0;
-  justify-self: flex-end;
   background: var(--dark-cyan);
   border-radius: 10px;
 }
 
 .add-to-cart-button:hover {
-  background: var(--button-cart-hover);
+  background: var(--button-cart-hover-color);
 }
 
 .add-to-cart-button p {
@@ -116,9 +120,10 @@ body {
 }
 
 
+
 @media Screen and (max-width: 480px) {
   :root {
-    --card-max-width: 90%;
+    --card-max-width: clamp(300px, 90%, 480px);
   }
 
   .product-img {
@@ -132,16 +137,9 @@ body {
 }
 
 
-@media Screen and (min-width: 480px) and (max-width: 680px) {
-  .product-card {
-    max-width: min(480px, 88%);
-  }
-}
-
-
 @media Screen and (min-width: 680px) {
   :root {
-    --card-max-width: 600px;
+    --card-max-width: clamp(300px, 88%, 600px);
   }
   
   .product-img {
@@ -150,7 +148,7 @@ body {
   }
 
   .product-card {
-    flex-direction: row;
+    //flex-direction: row;
   }
 
   .product-body {
